add_library(xpp INTERFACE)
target_sources(xpp INTERFACE
        xpp/colormap.hpp
        xpp/connection.hpp
        xpp/core.hpp
        xpp/cursor.hpp
        xpp/drawable.hpp
        xpp/event.hpp
        xpp/fontable.hpp
        xpp/font.hpp
        xpp/gcontext.hpp
        xpp/generic.hpp
        xpp/pixmap.hpp
        xpp/window.hpp
        xpp/xpp.hpp
        xpp/generic/signature.hpp
        xpp/generic/input_iterator_adapter.hpp
        xpp/generic/iterator_traits.hpp
        xpp/generic/event.hpp
        xpp/generic/resource.hpp
        xpp/generic/factory.hpp
        xpp/generic/reply_iterator.hpp
        xpp/generic/request.hpp
        xpp/generic/extension.hpp
        xpp/generic/error.hpp
        xpp/proto/sync.hpp
        xpp/proto/xinerama.hpp
        xpp/proto/xv.hpp
        xpp/proto/x.hpp
        xpp/proto/record.hpp
        xpp/proto/present.hpp
        xpp/proto/xf86dri.hpp
        xpp/proto/shape.hpp
        xpp/proto/xprint.hpp
        xpp/proto/xevie.hpp
        xpp/proto/glx.hpp
        xpp/proto/bigreq.hpp
        xpp/proto/randr.hpp
        xpp/proto/shm.hpp
        xpp/proto/xc_misc.hpp
        xpp/proto/xkb.hpp
        xpp/proto/dri2.hpp
        xpp/proto/dri3.hpp
        xpp/proto/screensaver.hpp
        xpp/proto/xinput.hpp
        xpp/proto/xvmc.hpp
        xpp/proto/render.hpp
        xpp/proto/composite.hpp
        xpp/proto/dpms.hpp
        xpp/proto/damage.hpp
        xpp/proto/xselinux.hpp
        xpp/proto/res.hpp
        xpp/proto/xfixes.hpp
        xpp/proto/xtest.hpp
)
target_include_directories(xpp INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
